# xsimd

./: meson.build  meson_options.txt
subprojects/: xtl.wrap
